--- a/modules/offered/doc/fr/CHANGELOG
+++ b/modules/offered/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13077 Ajout du modèle de groupe de données complémentaires
 * FEA#13073 Ajout de la distinction entre champs requis pour les devis et les champs requis pour la souscription dans l'API de description des produits
 * FEA#13174 Ajout d'un onglet dans données complémentaires pour afficher la liste des resources web
 * FEA#12073 Ajout d'une règle de comportement à la souscription afin de définir si une garantie est obligatoire ou optionnelle en fonction d'un algorithme paramétré (par exemple: il devient possible de rendre un garantie optionnelle ou obligatoire en fonction de l'âge du souscritpeur)
