--- a/modules/document_request/doc/en/CHANGELOG
+++ b/modules/document_request/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#13350 Add dynamically evaluated web resources on document descriptions
+
 Version 2.6 - 2019-10-11
 * FEA#12341 Define a workflow for attachment status
 * FEA#12341 Add APIs on document request lines
