--- a/modules/web_configuration/doc/en/CHANGELOG
+++ b/modules/web_configuration/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13350 Evaluate value field of web resources with genshi
 * FEA#13159 Allow binary values for web UI resources
 
 Version 2.6 - 2019-10-11
