coog_core: Auto cache read / search of configuration models (#3262)
Fix #13062

--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13062 Ajout d'un cache intelligent sur les objets de configuration
 * BUG#12910 Correction d'un cas à la marge sur le calcul des montants d'échéance
 
 Version 2.6 - 2019-10-11
