--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13062 Add auto-cache for configuration objects
 * BUG#12910 Fix an edge case when computing prorated amounts
 
 Version 2.6 - 2019-10-11
