electronic_signature: Use good document desc to initiate signature process (#3325)

--- a/modules/document_request_electronic_signature/doc/en/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Use good document desc to initiate signature process
 * BUG#13271 Fix PY2PDF merger crash when bookmarks are set
 
 Version 2.6 - 2019-10-11
