--- a/modules/document_request_electronic_signature/doc/fr/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Utilisation du bon type de document pour l'initialisation de la signature
 * BUG#13271 Correctif d'un crash de la librairie PY2PDF lorsqu'il y à des bookmarks
 
 Version 2.6 - 2019-10-11
