report_engine: Fix crash in generating reports which have an attachment with formatting for internal EDM (#3274)
Fix #13140

--- a/modules/report_engine/doc/en/CHANGELOG
+++ b/modules/report_engine/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13140 Fix crash which occures when generating a report which has an attachment with formatting for internal EDM
+
 Version 2.6 - 2019-10-11
 * FEA#12161 Interface with BDOC printing system for batch printing
 * BUG#11815 Delay file writes to the commit of the Transaction
