--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13318 Add rule engine function which returns total indemnificated (paid/validated) amount for a covered person and benefit on current term
 * BUG#13304 Do not check share for canceled indemnification
 
 Version 2.6 - 2019-10-11
