claim: migration of field name for benefit loss and event descriptions (#3341)
Fix #00000

--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Add migration for field "Name" on benefit event description and loss description
 * OTH#00000 Improve administration benefit view to display all loss desc 
 
 Version 2.6 - 2019-10-11
