--- a/modules/claim/doc/fr/CHANGELOG
+++ b/modules/claim/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Ajout d'une migration pour le champ "Nom" sur le descripteur de préjudice et le descripteur d'évènement
 * OTH#00000 Amélioration de la vue de l'onglet administration sur une prestation pour afficher plus largement les préjudices
 
 Version 2.6 - 2019-10-11
