claim_prest_ij_service: Hotfix manual covered subscription wizard with subsidiaries (#3175)
Fix #00000

--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12706 Hotfix manual covered person subscription wizard with subsidiaries
+
 Version 2.6 - 2019-10-11
 * BUG#12546 Fix batch to wait until all files in the transaction are successfully processed before archiving it
 * OTH#00000 Translate Mandate identification to RUM
