--- a/modules/claim_prest_ij_service/doc/fr/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12706 Correctif sur l'assistant de souscription manuelle d'une personne couverte avec les filiales
+
 Version 2.6 - 2019-10-11
 * BUG#12546 Correction du batch pour attendre que tous les fichiers de la transaction soient traités avant de les archiver
 * OTH#00000 Traduire le champs Identification d'un mandat SEPA par RUM
