--- a/modules/document_request/doc/fr/CHANGELOG
+++ b/modules/document_request/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13092 Domaine erronée sur demande de document lors de la déclaration de sinistre
 * FEA#13350 Ajout de ressources web évaluées dynamiquement sur les descriptions de documents
 
 Version 2.6 - 2019-10-11
