party_public_employment: Allow to fill work_country and work_subdivis… (#3344)
Fix #13436

--- a/modules/party_public_employment/doc/fr/CHANGELOG
+++ b/modules/party_public_employment/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13436 Ajout des champs pays et département d'affectation sur un emploi
 * BUG#13193 Mettre à null la donnée administrative_situation_sub_status lorsque la donnée administrative_situation est modifiée
 
 Version 2.6 - 2019-10-11
