--- a/modules/party_public_employment/doc/en/CHANGELOG
+++ b/modules/party_public_employment/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13436 Allow to fill work_country and work_subdivision on a party employment
 * BUG#13193 Set the administrative_situation_sub_status data to null when the administrative_situation data is modified
 
 Version 2.6 - 2019-10-11
