--- a/modules/party_birth_data/doc/en/CHANGELOG
+++ b/modules/party_birth_data/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13466 Not reseting birth zip and city when the SSN is wrong or does not correspond to any INSEE code
+
 Version 2.6 - 2019-10-11
 * BUG#12044 Update birth country from SSN
 * FEA#11631 Add unit tests if party_ssn is installed
