--- a/modules/party_birth_data/doc/fr/CHANGELOG
+++ b/modules/party_birth_data/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13466 Ne pas réinitialiser la commune de naissance lorsque le NIR est faux ou ne correspondant pas un un code insee
+
 Version 2.6 - 2019-10-11
 * BUG#12044 Mise à jour du pays de naissance depuis le NIR
 * FEA#11631 Ajout des tests unitaires si le module party_ssn est installé
