--- a/modules/document_request_electronic_signature/doc/en/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Set reception date when receiving electronic signature callback
 * BUG#13387 Fix protected documents research when calculating required documents with electronic signature
 * OTH#0000 Use good document desc to initiate signature process
 * BUG#13271 Fix PY2PDF merger crash when bookmarks are set
