--- a/modules/offered/doc/en/CHANGELOG
+++ b/modules/offered/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Use sequence order to sort extra data in menu entry point
 * FEA#13077 Add extra data group mixin
 * FEA#13073 Add distinction between field required for quotation and fields required for subscription in the Product Description API
 * FEA#13174 Add a tab in extra data to display the list of web resources
