--- a/modules/party_cog/doc/fr/CHANGELOG
+++ b/modules/party_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13147 Redéfinir la fonction add_func_key
 * BUG#00000 Rendre possile la recherche de tiers inactifs
 
 Version 2.6 - 2019-10-11
