document_request_electronic_signature: Check pdf are real pdf documents before merging (#3350)

--- a/modules/document_request_electronic_signature/doc/en/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Check pdf are real pdf documents before merging
 * OTH#0000 Set reception date when receiving electronic signature callback
 * BUG#13387 Fix protected documents research when calculating required documents with electronic signature
 * OTH#0000 Use good document desc to initiate signature process
