bank_cog: Integrate swift bank bic file (#3299)
Fix #13206

--- a/modules/bank_cog/doc/fr/CHANGELOG
+++ b/modules/bank_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13206 Intégration du référentiel des banques en utilisant le format "Swift"
 * OTH#00000 Amélioration des performances du chargement des banques
 
 Version 2.6 - 2019-10-11
