--- a/modules/bank_cog/locale/fr.po
+++ b/modules/bank_cog/locale/fr.po
@@ -62,6 +62,10 @@ msgctxt "field:bank.account.number,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:bank_cog.data.set,countries_to_import:"
+msgid "Countries to import"
+msgstr "Pays pour lesquels les bics seront importés"
+
 msgctxt "field:bank_cog.data.set,data_file:"
 msgid "Default Data file"
 msgstr "Fichier de données par défaut"
@@ -86,6 +90,46 @@ msgctxt "field:bank_cog.data.set,use_default:"
 msgid "Use default file"
 msgstr "Utiliser le fichier par défaut"
 
+msgctxt "field:country.country-party.configuration,configuration:"
+msgid "Configuration"
+msgstr "Configuration"
+
+msgctxt "field:country.country-party.configuration,country:"
+msgid "Country"
+msgstr "Pays"
+
+msgctxt "field:country.country-party.configuration,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:country.country-party.configuration,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:country.country-party.configuration,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:country.country-party.configuration,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt "field:country.country-party.configuration,rec_name:"
+msgid "Record Name"
+msgstr "Nom de l'enregistrement"
+
+msgctxt "field:country.country-party.configuration,write_date:"
+msgid "Write Date"
+msgstr "Modifié par"
+
+msgctxt "field:country.country-party.configuration,write_uid:"
+msgid "Write User"
+msgstr "Modifié par"
+
+msgctxt "field:country.country-party.configuration,xml_id:"
+msgid "XML Id"
+msgstr "XML Id"
+
 msgctxt "field:ir.test_case,currency:"
 msgid "Main Currency"
 msgstr "Monnaie principale"
@@ -93,6 +137,10 @@ msgstr "Monnaie principale"
 msgctxt "field:ir.test_case,number_of_banks:"
 msgid "Number of Banks"
 msgstr "Nombre de banques"
+
+msgctxt "field:party.configuration,used_countries:"
+msgid "Used countries"
+msgstr "Pays pour lesquels les banques seront importées depuis le fichier swift"
 
 msgctxt "field:party.party,bank_accounts:"
 msgid "Bank Accounts"
@@ -146,6 +194,14 @@ msgctxt "field:party.synthesis.menu.bank_account,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "help:party.configuration,bic_swift_countries:"
+msgid "Countries used to import swift bic"
+msgstr "Pour importer les banques depuis le fichier Swift"
+
+msgctxt "help:bank_cog.data.set,countries_to_import:"
+msgid "Countries for which bics will be imported"
+msgstr "Pays pour lesquels les bics seront importés"
+
 msgctxt "help:bank_cog.data.set,is_update:"
 msgid "If set to True, the existing banks will be updated"
 msgstr "Si défini à Vrai, les banques existantes seront mises à jour"
@@ -153,6 +209,10 @@ msgstr "Si défini à Vrai, les banques existantes seront mises à jour"
 msgctxt "model:bank_cog.data.set,name:"
 msgid "Bank Data Set"
 msgstr "Mise à jour des banques"
+
+msgctxt "model:country.country-party.configuration,name:"
+msgid "Country Party Configuration"
+msgstr "Configuration des pays pour import des bics swift"
 
 msgctxt "model:ir.action,name:"
 msgid "Banks"
@@ -189,6 +249,10 @@ msgstr "Menu Compte Bancaire Synthèse Tiers "
 msgctxt "selection:bank_cog.data.set,file_format:"
 msgid "Coog File"
 msgstr "Fichier Coog"
+
+msgctxt "selection:bank_cog.data.set,file_format:"
+msgid "Swift"
+msgstr "Fichier SWIFT"
 
 msgctxt "view:party.party:"
 msgid "Bank"
