--- a/modules/report_engine_bdoc/doc/en/CHANGELOG
+++ b/modules/report_engine_bdoc/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Do not encode in base 64 since the zeep library encode it
 * FEA#13118 Allow to call BDOC via webservice
 
 Version 2.6 - 2019-10-11
