--- a/modules/endorsement/doc/fr/CHANGELOG
+++ b/modules/endorsement/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13146 Suppression du contrôle de l'éligibilité lors de la résiliation d'un contrat
 * BUG#11342 Permettre les avenants sur les contrats suspendus
 * BUG#13039 Le résumé d'avenant n'affichait pas les enregistrements supprimés par l'avenant
 
