coog_core: make export_json of binary data a str object instead of bytes (#3362)
Fix #13491

--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13491 Fix json export of binary data
 * FEA#13062 Add auto-cache for configuration objects
 * BUG#12910 Fix an edge case when computing prorated amounts
 
