--- a/modules/offered_insurance/doc/en/CHANGELOG
+++ b/modules/offered_insurance/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#13170 APi describe product, move coverages description
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Add Subscriber zipcode in rule engine functions
 * BUG#12120 Fix rule engine method: Option already subscribed
