--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13398 Correctly update move line payment date when there is an outstanding amount
 * FEA#12980 Add a backend API for quotations
 * BUG#13014 The remaning repartition method was not set to Write Off when the write off amount is superior to zero
 
