claim_document: Fixes on document resquest lines for claim process (#3358)
Fix #00000

--- a/modules/claim_document/locale/fr.po
+++ b/modules/claim_document/locale/fr.po
@@ -120,10 +120,10 @@ msgstr "Report de demande de document"
 msgctxt "model:ir.message,text:msg_document_request_sent"
 msgid ""
 "Document requests sent:\n"
-"%(documents)"
+"%(documents)s"
 msgstr ""
 "Demandes de documents envoyés:\n"
-"%(documents)"
+"%(documents)s"
 
 msgctxt "model:ir.message,text:msg_no_documents_required"
 msgid "No documents are required."
