--- a/modules/claim_document/doc/fr/CHANGELOG
+++ b/modules/claim_document/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#00000 Corrections sur les demandes de pièces pour le processus des sinistres
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
