--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#13370 Handle party extra_data in party creation API
+
 Version 2.6 - 2019-10-11
 * FEA#12648 Allow to define required covered party data for contract activation.
 * BUG#12757 Prevent crash when creating extra premiums / exclusions
