--- a/modules/third_party_protocol_almerys/doc/en/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13523 Fix almerys feedbak chain batch and archive mechanism
 * OTH#00000 Handle unknown error codes in Almerys feedback batch
 * OTH#00000 Fix ssn and perimetre service in batch
 
