account_payment_sepa_contract: Fix payment date for rejection fee (#3371)
Fix #13529

--- a/modules/account_payment_sepa_contract/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_contract/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13529 Fix payment date initialization for rejection fee invoice
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 * BUG#11068 Only force Sepa payment without mandate state to draft when it is receivable
