--- a/modules/report_engine_email/doc/en/CHANGELOG
+++ b/modules/report_engine_email/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13588 Fix on report context passed to the attachments when generating emails
+
 Version 2.6 - 2019-10-11
 * BUG#12216 Do not display wrong warning when sending an email with images but no attachments
 * BUG#11811 Fix duplicated translation of generated_code
