account_payment_sepa_cog: add has_succeeded_payments function field on mandate (#3380)
Fix #13573

--- a/modules/account_payment_sepa_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13573 Degraded performances for SEPA message generation in case of amendment
 * FEA#12943 Add constraint on mandate signature date
 
 Version 2.6 - 2019-10-11
