--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 append_functional_error must properly handle cases of pure string errors
 * BUG#13491 Fix json export of binary data
 * FEA#13062 Add auto-cache for configuration objects
 * BUG#12910 Fix an edge case when computing prorated amounts
