--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13570 New comment field on extra premium
 * FEA#13370 Handle party extra_data in party creation API
 
 Version 2.6 - 2019-10-11
