--- a/modules/contract_insurance/doc/fr/CHANGELOG
+++ b/modules/contract_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13570 Nouveau champ commentaire sur les surprimes permettant de différencier des surprimes pour le même type de risque (Risque sportif - Plongée sous Marine / Risque sportif - Courses automobiles)
 * FEA#13370 Récupère les données complémentaires de tiers dans l'API de création de tiers
 
 Version 2.6 - 2019-10-11
