--- a/modules/contract_insurance_document_request/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_document_request/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#13618 Possibilité de filtrer les types de document par produit. Utile quand un gestionnaire souhaite demander un nouveau document requis en filtrant par produit
+
 Version 2.6 - 2019-10-11
 * FEA#12837 Ajout d'une nouvelle fonction dans le moteur de règles retournant l'ensemble des documents demandés pour un contrat
 * FEA#12764 Ajout d'une API pour téléverser des documents vers un contrat
