offered: fix extra data groups sub-groups relation (#3379)
Fix #13574

--- a/modules/offered/doc/en/CHANGELOG
+++ b/modules/offered/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13574 Fix extra data groups relation to sub groups
 * OTH#00000 Clear extra data structure cache on extra data modification
 * OTH#0000 Use sequence order to sort extra data in menu entry point
 * FEA#13077 Add extra data group mixin
