--- a/modules/offered/locale/fr.po
+++ b/modules/offered/locale/fr.po
@@ -1283,6 +1283,14 @@ msgid "Data %(data)s has multiple parents with the current configuration."
 msgstr ""
 "La donnée %(data)s a plusieurs parents dans la configuration courante."
 
+msgctxt "model:ir.message,text:msg_must_force_extra_on_all_packages"
+msgid ""
+"The forcing of extra datas %(diff)s for option %(option)s must be done for "
+"all packages that include this option."
+msgstr ""
+"Le forcage des données complémentaires %(diff)s pour la garantie %(option)s "
+"doit être fait pour toutes les formules qui incluent cette garantie."
+
 msgctxt "model:ir.message,text:msg_package_only_on_subscription"
 msgid "Subscribe by package is only available on quote"
 msgstr "La souscription par formule n'est disponible que sur un devis"
