party_cog: Fix party synthesis menu global search (#3390)
Fix #11749

--- a/modules/party_cog/doc/fr/CHANGELOG
+++ b/modules/party_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11749 Correction de la recherche globale des synthèses acteur
 * FEA#13147 Redéfinir la fonction add_func_key
 * BUG#00000 Rendre possile la recherche de tiers inactifs
 
