--- a/modules/questionnaire/doc/fr/CHANGELOG
+++ b/modules/questionnaire/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13518 Vérification du type métier des données complémentaires
 * FEA#13077 Ajout de groupes de données complémentaires dans les parties de questionnaires
 
 Version 2.6 - 2019-10-11
