--- a/modules/table/doc/fr/CHANGELOG
+++ b/modules/table/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13646 Suppression de la fonctionnalité dépréciée Table2D
 * BUG#13004 Correction de l'import de cellules depuis un fichier CSV
 
 Version 2.6 - 2019-10-11
